# lab1/src/api/generated/server/controllers/tables_controller.py
@@ -3,8 +3,8 @@ from typing import Dict
 from typing import Tuple
 from typing import Union
 
-from server.models.databases_db_name_tables_post_request import DatabasesDbNameTablesPostRequest  # noqa: E501
-from server.models.databases_db_name_tables_union_post_request import DatabasesDbNameTablesUnionPostRequest  # noqa: E501
+from server.models.table_create import TableCreate  # noqa: E501
+from server.models.table_union import TableUnion  # noqa: E501
 from server import util
 
 
@@ -21,20 +21,20 @@ def databases_db_name_tables_get(db_name):  # noqa: E501
     return 'do some magic!'
 
 
-def databases_db_name_tables_post(db_name, databases_db_name_tables_post_request):  # noqa: E501
+def databases_db_name_tables_post(db_name, table_create):  # noqa: E501
     """Create a new table in a database
 
      # noqa: E501
 
     :param db_name: 
     :type db_name: str
-    :param databases_db_name_tables_post_request: 
-    :type databases_db_name_tables_post_request: dict | bytes
+    :param table_create: 
+    :type table_create: dict | bytes
 
     :rtype: Union[None, Tuple[None, int], Tuple[None, int, Dict[str, str]]
     """
     if connexion.request.is_json:
-        databases_db_name_tables_post_request = DatabasesDbNameTablesPostRequest.from_dict(connexion.request.get_json())  # noqa: E501
+        table_create = TableCreate.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
@@ -53,18 +53,18 @@ def databases_db_name_tables_table_name_schema_get(db_name, table_name):  # noqa
     return 'do some magic!'
 
 
-def databases_db_name_tables_union_post(db_name, databases_db_name_tables_union_post_request):  # noqa: E501
+def databases_db_name_tables_union_post(db_name, table_union):  # noqa: E501
     """Perform a union operation between two tables
 
      # noqa: E501
 
     :param db_name: 
     :type db_name: str
-    :param databases_db_name_tables_union_post_request: 
-    :type databases_db_name_tables_union_post_request: dict | bytes
+    :param table_union: 
+    :type table_union: dict | bytes
 
     :rtype: Union[List[Dict[str, str]], Tuple[List[Dict[str, str]], int], Tuple[List[Dict[str, str]], int, Dict[str, str]]
     """
     if connexion.request.is_json:
-        databases_db_name_tables_union_post_request = DatabasesDbNameTablesUnionPostRequest.from_dict(connexion.request.get_json())  # noqa: E501
+        table_union = TableUnion.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
