# lab1/src/api/generated/server/models/__init__.py
@@ -1,6 +1,6 @@
 # flake8: noqa
 # import models into model package
-from server.models.databases_db_name_tables_post_request import DatabasesDbNameTablesPostRequest
-from server.models.databases_db_name_tables_table_name_rows_put_request import DatabasesDbNameTablesTableNameRowsPutRequest
-from server.models.databases_db_name_tables_union_post_request import DatabasesDbNameTablesUnionPostRequest
-from server.models.databases_post_request import DatabasesPostRequest
+from server.models.database_create import DatabaseCreate
+from server.models.row_update import RowUpdate
+from server.models.table_create import TableCreate
+from server.models.table_union import TableUnion
