# lab1/src/api/generated/server/models/database_create.py
@@ -6,16 +6,16 @@ from server.models.base_model import Model
 from server import util
 
 
-class DatabasesPostRequest(Model):
+class DatabaseCreate(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
     def __init__(self, name=None):  # noqa: E501
-        """DatabasesPostRequest - a model defined in OpenAPI
+        """DatabaseCreate - a model defined in OpenAPI
 
-        :param name: The name of this DatabasesPostRequest.  # noqa: E501
+        :param name: The name of this DatabaseCreate.  # noqa: E501
         :type name: str
         """
         self.openapi_types = {
@@ -29,34 +29,34 @@ class DatabasesPostRequest(Model):
         self._name = name
 
     @classmethod
-    def from_dict(cls, dikt) -> 'DatabasesPostRequest':
+    def from_dict(cls, dikt) -> 'DatabaseCreate':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The _databases_post_request of this DatabasesPostRequest.  # noqa: E501
-        :rtype: DatabasesPostRequest
+        :return: The DatabaseCreate of this DatabaseCreate.  # noqa: E501
+        :rtype: DatabaseCreate
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def name(self) -> str:
-        """Gets the name of this DatabasesPostRequest.
+        """Gets the name of this DatabaseCreate.
 
         Name of the database to create  # noqa: E501
 
-        :return: The name of this DatabasesPostRequest.
+        :return: The name of this DatabaseCreate.
         :rtype: str
         """
         return self._name
 
     @name.setter
     def name(self, name: str):
-        """Sets the name of this DatabasesPostRequest.
+        """Sets the name of this DatabaseCreate.
 
         Name of the database to create  # noqa: E501
 
-        :param name: The name of this DatabasesPostRequest.
+        :param name: The name of this DatabaseCreate.
         :type name: str
         """
 
