# lab1/src/api/generated/server/models/table_create.py
@@ -6,18 +6,18 @@ from server.models.base_model import Model
 from server import util
 
 
-class DatabasesDbNameTablesPostRequest(Model):
+class TableCreate(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
     def __init__(self, table_name=None, _schema=None):  # noqa: E501
-        """DatabasesDbNameTablesPostRequest - a model defined in OpenAPI
+        """TableCreate - a model defined in OpenAPI
 
-        :param table_name: The table_name of this DatabasesDbNameTablesPostRequest.  # noqa: E501
+        :param table_name: The table_name of this TableCreate.  # noqa: E501
         :type table_name: str
-        :param _schema: The _schema of this DatabasesDbNameTablesPostRequest.  # noqa: E501
+        :param _schema: The _schema of this TableCreate.  # noqa: E501
         :type _schema: Dict[str, str]
         """
         self.openapi_types = {
@@ -34,34 +34,34 @@ class DatabasesDbNameTablesPostRequest(Model):
         self.__schema = _schema
 
     @classmethod
-    def from_dict(cls, dikt) -> 'DatabasesDbNameTablesPostRequest':
+    def from_dict(cls, dikt) -> 'TableCreate':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The _databases__db_name__tables_post_request of this DatabasesDbNameTablesPostRequest.  # noqa: E501
-        :rtype: DatabasesDbNameTablesPostRequest
+        :return: The TableCreate of this TableCreate.  # noqa: E501
+        :rtype: TableCreate
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def table_name(self) -> str:
-        """Gets the table_name of this DatabasesDbNameTablesPostRequest.
+        """Gets the table_name of this TableCreate.
 
         Name of the table to create  # noqa: E501
 
-        :return: The table_name of this DatabasesDbNameTablesPostRequest.
+        :return: The table_name of this TableCreate.
         :rtype: str
         """
         return self._table_name
 
     @table_name.setter
     def table_name(self, table_name: str):
-        """Sets the table_name of this DatabasesDbNameTablesPostRequest.
+        """Sets the table_name of this TableCreate.
 
         Name of the table to create  # noqa: E501
 
-        :param table_name: The table_name of this DatabasesDbNameTablesPostRequest.
+        :param table_name: The table_name of this TableCreate.
         :type table_name: str
         """
 
@@ -69,20 +69,22 @@ class DatabasesDbNameTablesPostRequest(Model):
 
     @property
     def _schema(self) -> Dict[str, str]:
-        """Gets the _schema of this DatabasesDbNameTablesPostRequest.
+        """Gets the _schema of this TableCreate.
 
+        Schema of the table as a dictionary (field_name: field_type)  # noqa: E501
 
-        :return: The _schema of this DatabasesDbNameTablesPostRequest.
+        :return: The _schema of this TableCreate.
         :rtype: Dict[str, str]
         """
         return self.__schema
 
     @_schema.setter
     def _schema(self, _schema: Dict[str, str]):
-        """Sets the _schema of this DatabasesDbNameTablesPostRequest.
+        """Sets the _schema of this TableCreate.
 
+        Schema of the table as a dictionary (field_name: field_type)  # noqa: E501
 
-        :param _schema: The _schema of this DatabasesDbNameTablesPostRequest.
+        :param _schema: The _schema of this TableCreate.
         :type _schema: Dict[str, str]
         """
 
