# lab1/src/api/generated/server/models/table_union.py
@@ -6,18 +6,18 @@ from server.models.base_model import Model
 from server import util
 
 
-class DatabasesDbNameTablesUnionPostRequest(Model):
+class TableUnion(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
     def __init__(self, table1=None, table2=None):  # noqa: E501
-        """DatabasesDbNameTablesUnionPostRequest - a model defined in OpenAPI
+        """TableUnion - a model defined in OpenAPI
 
-        :param table1: The table1 of this DatabasesDbNameTablesUnionPostRequest.  # noqa: E501
+        :param table1: The table1 of this TableUnion.  # noqa: E501
         :type table1: str
-        :param table2: The table2 of this DatabasesDbNameTablesUnionPostRequest.  # noqa: E501
+        :param table2: The table2 of this TableUnion.  # noqa: E501
         :type table2: str
         """
         self.openapi_types = {
@@ -34,34 +34,34 @@ class DatabasesDbNameTablesUnionPostRequest(Model):
         self._table2 = table2
 
     @classmethod
-    def from_dict(cls, dikt) -> 'DatabasesDbNameTablesUnionPostRequest':
+    def from_dict(cls, dikt) -> 'TableUnion':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The _databases__db_name__tables_union_post_request of this DatabasesDbNameTablesUnionPostRequest.  # noqa: E501
-        :rtype: DatabasesDbNameTablesUnionPostRequest
+        :return: The TableUnion of this TableUnion.  # noqa: E501
+        :rtype: TableUnion
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def table1(self) -> str:
-        """Gets the table1 of this DatabasesDbNameTablesUnionPostRequest.
+        """Gets the table1 of this TableUnion.
 
         Name of the first table  # noqa: E501
 
-        :return: The table1 of this DatabasesDbNameTablesUnionPostRequest.
+        :return: The table1 of this TableUnion.
         :rtype: str
         """
         return self._table1
 
     @table1.setter
     def table1(self, table1: str):
-        """Sets the table1 of this DatabasesDbNameTablesUnionPostRequest.
+        """Sets the table1 of this TableUnion.
 
         Name of the first table  # noqa: E501
 
-        :param table1: The table1 of this DatabasesDbNameTablesUnionPostRequest.
+        :param table1: The table1 of this TableUnion.
         :type table1: str
         """
 
@@ -69,22 +69,22 @@ class DatabasesDbNameTablesUnionPostRequest(Model):
 
     @property
     def table2(self) -> str:
-        """Gets the table2 of this DatabasesDbNameTablesUnionPostRequest.
+        """Gets the table2 of this TableUnion.
 
         Name of the second table  # noqa: E501
 
-        :return: The table2 of this DatabasesDbNameTablesUnionPostRequest.
+        :return: The table2 of this TableUnion.
         :rtype: str
         """
         return self._table2
 
     @table2.setter
     def table2(self, table2: str):
-        """Sets the table2 of this DatabasesDbNameTablesUnionPostRequest.
+        """Sets the table2 of this TableUnion.
 
         Name of the second table  # noqa: E501
 
-        :param table2: The table2 of this DatabasesDbNameTablesUnionPostRequest.
+        :param table2: The table2 of this TableUnion.
         :type table2: str
         """
 
